test_regress/t/t_expr_incr_unsup.out
%Error-UNSUPPORTED: t/t_expr_incr_unsup.v:17:34: Unsupported: Inc/Dec of expression with side-effects
   17 |         $display("Value: %d", arr[postincrement_i()]++);
      |                                  ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
